project(vocount_LIB)

file(GLOB VOCOUNT_CPPSRC "*.cpp")

add_library(${VOCOUNT_LIB} SHARED ${VOCOUNT_CPPSRC} )
target_link_libraries(${VOCOUNT_LIB} LINK_PUBLIC ${GLIB2_LIBRARIES} ${HDBSCAN_LIBRARIES} ${OpenCV_LIBS} ${GSL_LIBRARIES} ${Qt5Core_LIBRARIES})
include_directories( ${GLIB2_INCLUDE_DIRS} ${HDBSCAN_INCLUDE_DIRS} ${VOCOUNT_INCLUDE_DIR} )# ${Qt5Core_INCLUDES})
